rework command structure
