# api/api.go
@@ -1,87 +1,30 @@
 package api
 
 import (
-	"embed"
+	"bytes"
+	"encoding/base64"
 	"encoding/json"
-	"fmt"
-	"io/fs"
+	"errors"
 	"net/http"
 	"os"
+	"os/exec"
 	"path/filepath"
-	"strings"
 
 	"github.com/pomdtr/smallweb/app"
-	"github.com/pomdtr/smallweb/auth"
 	"github.com/pomdtr/smallweb/utils"
-	"golang.org/x/net/webdav"
+	"github.com/pomdtr/smallweb/worker"
 )
 
 //go:generate go run github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen --config=config.yaml ./openapi.json
 
-//go:embed swagger
-var swagger embed.FS
-
 type Server struct {
-	domain        string
-	httpWriter    *utils.MultiWriter
-	consoleWriter *utils.MultiWriter
+	domain string
 }
 
-func NewHandler(domain string, httpWriter *utils.MultiWriter, consoleWriter *utils.MultiWriter) http.Handler {
-	server := &Server{domain: domain, httpWriter: httpWriter, consoleWriter: consoleWriter}
+func NewHandler(domain string) http.Handler {
+	server := &Server{domain: domain}
 	handler := Handler(server)
-	webdavHandler := webdav.Handler{
-		FileSystem: webdav.Dir(utils.RootDir()),
-		LockSystem: webdav.NewMemLS(),
-		Prefix:     "/webdav",
-	}
-
-	caddyHandler := http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		d := r.URL.Query().Get("domain")
-		if d == domain {
-			w.WriteHeader(http.StatusOK)
-			w.Write([]byte("OK"))
-			return
-		}
-
-		if !strings.HasSuffix(d, "."+domain) {
-			http.Error(w, "invalid domain", http.StatusBadRequest)
-			return
-		}
-
-		appname := strings.TrimSuffix(d, "."+domain)
-		appDir := filepath.Join(utils.RootDir(), appname)
-		if _, err := app.LoadApp(appDir, domain); err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
-			return
-		}
-
-		w.WriteHeader(http.StatusOK)
-		w.Write([]byte("OK"))
-	})
-
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		apiToken, err := auth.GetApiToken()
-		if err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
-			return
-		}
-
-		if r.Header.Get("Authorization") != "Bearer "+apiToken {
-			http.Error(w, "Unauthorized", http.StatusUnauthorized)
-			return
-		}
-
-		if strings.HasPrefix(r.URL.Path, "/webdav") {
-			webdavHandler.ServeHTTP(w, r)
-			return
-		}
-
-		if strings.HasPrefix(r.URL.Path, "/v0") {
-			handler.ServeHTTP(w, r)
-			return
-		}
-
 		if r.URL.Path == "/openapi.json" {
 			spec, err := GetSwagger()
 			if err != nil {
@@ -95,18 +38,7 @@ func NewHandler(domain string, httpWriter *utils.MultiWriter, consoleWriter *uti
 			return
 		}
 
-		if strings.HasPrefix(r.URL.Path, "/caddy/check") {
-			http.StripPrefix("/caddy/check", caddyHandler).ServeHTTP(w, r)
-			return
-		}
-
-		subfs, err := fs.Sub(swagger, "swagger")
-		if err != nil {
-			http.Error(w, err.Error(), http.StatusInternalServerError)
-			return
-		}
-		server := http.FileServer(http.FS(subfs))
-		server.ServeHTTP(w, r)
+		handler.ServeHTTP(w, r)
 	})
 }
 
@@ -206,121 +138,73 @@ func (me *Server) GetApps(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-func (me *Server) GetHttpLogs(w http.ResponseWriter, r *http.Request, params GetHttpLogsParams) {
-	if me.httpWriter == nil {
-		http.Error(w, "Logging unsupported", http.StatusInternalServerError)
-		return
-	}
-
-	flusher, ok := w.(http.Flusher)
-	if !ok {
-		http.Error(w, "Streaming unsupported", http.StatusInternalServerError)
-		return
-	}
-
-	// Set the necessary headers for SSE
-	w.Header().Set("Content-Type", "application/octet-stream")
-	w.Header().Set("Cache-Control", "no-cache")
-	w.Header().Set("Connection", "keep-alive")
-
-	// Create a new channel for this client to receive logs
-	clientChan := make(chan []byte)
-	me.httpWriter.AddClient(clientChan)
-	defer me.httpWriter.RemoveClient(clientChan)
-
-	// Listen to the client channel and send logs to the client
-	for {
-		select {
-		case logMsg := <-clientChan:
-			// Send the log message as SSE event
-			if params.Host == nil {
-				w.Write(logMsg)
-				flusher.Flush() // Push data to the client
-				continue
-			}
-
-			var log map[string]any
-			if err := json.Unmarshal(logMsg, &log); err != nil {
-				fmt.Fprintln(os.Stderr, "failed to parse log:", err)
-				continue
-			}
-
-			request, ok := log["request"].(map[string]any)
-			if !ok {
-				continue
-			}
-
-			host, ok := request["host"].(string)
-			if !ok {
-				continue
-			}
-
-			if host != *params.Host {
-				continue
-			}
-
-			w.Write(logMsg)
-			flusher.Flush() // Push data to the client
-		case <-r.Context().Done():
-			// If the client disconnects, stop the loop
-			return
-		}
-	}
+type CommandOutput struct {
+	Stdout  string `json:"stdout"`
+	Stderr  string `json:"stderr"`
+	Code    int    `json:"code"`
+	Success bool   `json:"success"`
 }
 
-func (me *Server) GetConsoleLogs(w http.ResponseWriter, r *http.Request, params GetConsoleLogsParams) {
-	if me.consoleWriter == nil {
-		http.Error(w, "Logging unsupported", http.StatusInternalServerError)
+func (me *Server) PostV0RunApp(w http.ResponseWriter, r *http.Request, appname string) {
+	a, err := app.LoadApp(filepath.Join(utils.RootDir(), appname), me.domain)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
-	flusher, ok := w.(http.Flusher)
-	if !ok {
-		http.Error(w, "Streaming unsupported", http.StatusInternalServerError)
+	var body PostV0RunAppJSONRequestBody
+	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
 
-	// Set the necessary headers for SSE
-	w.Header().Set("Content-Type", "application/octet-stream")
-	w.Header().Set("Cache-Control", "no-cache")
-	w.Header().Set("Connection", "keep-alive")
+	wk := worker.NewWorker(a)
+	command, err := wk.Command(body.Args...)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
 
-	// Create a new channel for this client to receive logs
-	clientChan := make(chan []byte)
-	me.consoleWriter.AddClient(clientChan)
-	defer me.consoleWriter.RemoveClient(clientChan)
-
-	// Listen to the client channel and send logs to the client
-	for {
-		select {
-		case logMsg := <-clientChan:
-			// Send the log message as SSE event
-			if params.App == nil {
-				w.Write(logMsg)
-				flusher.Flush() // Push data to the client
-				continue
-			}
-
-			var log map[string]any
-			if err := json.Unmarshal(logMsg, &log); err != nil {
-				fmt.Fprintln(os.Stderr, "failed to parse log:", err)
-				continue
-			}
-
-			app, ok := log["app"].(string)
-			if !ok {
-				continue
-			}
-
-			if app != *params.App {
-				continue
-			}
-
-			w.Write(logMsg)
-			flusher.Flush() // Push data to the client
-		case <-r.Context().Done():
-			// If the client disconnects, stop the loop
+	if body.Stdin != nil {
+		stdin, err := base64.StdEncoding.DecodeString(*body.Stdin)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
 			return
 		}
+
+		command.Stdin = bytes.NewReader(stdin)
+	}
+
+	var stdout, stderr bytes.Buffer
+	command.Stdout = &stdout
+	command.Stderr = &stderr
+
+	if err := command.Start(); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	var code int
+	if err := command.Wait(); err != nil {
+		var exitErr *exec.ExitError
+		if !errors.As(err, &exitErr) {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		code = exitErr.ExitCode()
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	encoder := json.NewEncoder(w)
+	encoder.SetIndent("", "  ")
+
+	if err := encoder.Encode(CommandOutput{
+		Stdout:  base64.StdEncoding.EncodeToString(stdout.Bytes()),
+		Stderr:  base64.StdEncoding.EncodeToString(stderr.Bytes()),
+		Code:    code,
+		Success: code == 0,
+	}); err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 }
